--- a/dtk-product-api/build.gradle
+++ b/dtk-product-api/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
